--- a/kardioml/requirements.txt
+++ b/kardioml/requirements.txt
@@ -14,3 +14,6 @@ scikit-learn==0.22.1
 samplerate==0.1.0
 PyMedTermino==0.3.3
 iterative-stratification==0.1.6
+sortedcontainers==2.2.2
+cython==0.29.17
+requests==2.23.0
