--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,19 @@ numpy==1.17.4
 scipy==1.2.1
 joblib==0.13.2
 Cython==0.29.13
-pandas==0.25.3
+pandas==1.1.0
 scikit-learn==0.21.3
+click==7.1.1
+torch
+torchvision
+tqdm==4.45.0
+torchnet==0.0.4
+torchsummary==1.5.1
+lightgbm==2.3.1
+dask
+eli5
+biosppy==0.6.1
+bayesian-optimization==1.2.0
+numba==0.50.1
+tensorboard==1.15.0
+jupyterlab
